# mqtt-sensor-network

./: .gitignore  README.md
client/: .env-default  Dockerfile  docker-compose.yml  main.py  pyproject.toml
client/config/: .influx.toml-default  config.toml  influx.toml  logger.yaml
node/: .env  .env-default  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  start_node.py
node/config/: config.toml  logger.yaml  promtail.yaml  telegraf.conf
